--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <button class="logout-btn hidden" onclick="logout()">Выйти</button>
         
         <div class="logo">
-            <h1>💰 BobBank</h1>
-            <p>Ваш надежный банк</p>
+            <h1>🏦 Bob Bank</h1>
+            <p>Надежное банковское обслуживание</p>
         </div>
 
         <!-- Главное меню -->
