Change title and update GitHub credentials
Updated the title and replaced placeholder GitHub username and repository.

--- a/index.html
+++ b/index.html
@@ -253,12 +253,8 @@
     </style>
 </head>
 <body>
-    <div class="setup-notice">
-        ⚙️ Setup: Edit the code and replace <code>YOUR_USERNAME</code> and <code>YOUR_REPO</code> with your GitHub info
-    </div>
-
     <div class="header">
-        <h1>Virtual World Marketplace</h1>
+        <h1>BWR Marketplace</h1>
         <button class="sell-btn" onclick="openModal()">+ Sell Item</button>
     </div>
 
@@ -307,8 +303,8 @@
 
     <script>
         // CONFIGURE THESE
-        const GITHUB_USERNAME = 'YOUR_USERNAME';
-        const GITHUB_REPO = 'YOUR_REPO';
+        const GITHUB_USERNAME = 'foretpzs';
+        const GITHUB_REPO = 'Bobbank';
 
         function openModal() {
             document.getElementById('modal').classList.add('active');
