--- a/index.html
+++ b/index.html
@@ -273,12 +273,12 @@
             <form id="itemForm">
                 <div class="form-group">
                     <label>Name <span class="required">*</span></label>
-                    <input type="text" id="name" required placeholder="Magic Sword">
+                    <input type="text" id="name" required placeholder="Название Товара">
                 </div>
 
                 <div class="form-group">
                     <label>Price <span class="required">*</span></label>
-                    <input type="text" id="price" required placeholder="100 coins">
+                    <input type="text" id="price" required placeholder="Цена товара">
                 </div>
 
                 <div class="form-group">
@@ -288,12 +288,12 @@
 
                 <div class="form-group">
                     <label>Telegram <span class="required">*</span></label>
-                    <input type="text" id="telegram" required placeholder="@username">
+                    <input type="text" id="telegram" required placeholder="@юз продавца">
                 </div>
 
                 <div class="form-group">
                     <label>Description</label>
-                    <textarea id="description" placeholder="Optional details..."></textarea>
+                    <textarea id="description" placeholder="Oпционально описание.."></textarea>
                 </div>
 
                 <button type="submit" class="submit-btn">Create Listing</button>
