Change GitHub repository name in index.html

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
     <script>
         // CONFIGURE THESE
         const GITHUB_USERNAME = 'foretpzs';
-        const GITHUB_REPO = 'BWT-WEB';
+        const GITHUB_REPO = 'Bobbank';
 
         function openModal() {
             document.getElementById('modal').classList.add('active');
