--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         }
 
         .sell-btn {
-            background: #238636;
+            background: #F187B7;
             color: white;
             border: none;
             padding: 8px 16px;
