Change sell button background on hover to white

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         }
 
         .sell-btn:hover {
-            background: #2ea043;
+            background: #FFFFFF;
         }
 
         .container {
