--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ margin-bottom: 8px;
 .item-price {
 font-size: 20px;
 font-weight: 600;
-color: #7ee787;
+color: #FFFFFF;
 margin-bottom: 12px;
 }
 
