--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ color: #c9d1d9;
 }
 
 .sell-btn {
-background: #238636;
+background: #F187B7;
 color: white;
 border: none;
 padding: 8px 16px;
@@ -46,7 +46,7 @@ transition: background 0.2s;
 }
 
 .sell-btn:hover {
-background: #2ea043;
+background: #FFA7CD;
 }
 
 .container {
@@ -108,7 +108,7 @@ line-height: 1.5;
 
 .contact-btn {
 display: inline-block;
-background: #238636;
+background: #F187B7;
 color: white;
 text-decoration: none;
 padding: 6px 12px;
@@ -119,7 +119,7 @@ transition: background 0.2s;
 }
 
 .contact-btn:hover {
-background: #2ea043;
+background: #FFA7CD;
 }
 
 .condition-badge {
@@ -132,12 +132,12 @@ margin-bottom: 8px;
 }
 
 .condition-new {
-background: #1f6feb;
+background: #B883E6;
 color: white;
 }
 
 .condition-used {
-background: #da3633;
+background: #977584;
 color: white;
 }
 
@@ -241,7 +241,7 @@ color: #f85149;
 
 .submit-btn {
 width: 100%;
-background: #238636;
+background: #F187B7;
 color: white;
 border: none;
 padding: 10px;
@@ -253,22 +253,9 @@ transition: background 0.2s;
 }
 
 .submit-btn:hover {
-background: #2ea043;
+background: #FFA7CD;
 }
 
-.setup-notice {
-background: #1f6feb;
-color: white;
-padding: 12px 20px;
-text-align: center;
-font-size: 14px;
-}
-
-.setup-notice code {
-background: rgba(255,255,255,0.2);
-padding: 2px 6px;
-border-radius: 3px;
-}
 </style>
 </head>
 <body>
