--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ color: #c9d1d9;
 }
 
 .sell-btn {
-background: #F187B7;
+background: #C2D8F9;
 color: white;
 border: none;
 padding: 8px 16px;
@@ -46,7 +46,7 @@ transition: background 0.2s;
 }
 
 .sell-btn:hover {
-background: #FFA7CD;
+background: #C1DAFF;
 }
 
 .container {
@@ -108,7 +108,7 @@ line-height: 1.5;
 
 .contact-btn {
 display: inline-block;
-background: #F187B7;
+background: #C2D8F9;
 color: white;
 text-decoration: none;
 padding: 6px 12px;
@@ -119,7 +119,7 @@ transition: background 0.2s;
 }
 
 .contact-btn:hover {
-background: #FFA7CD;
+background: #C1DAFF;
 }
 
 .condition-badge {
