--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
         .item-name {
             font-size: 16px;
             font-weight: 600;
-            color: #58a6ff;
+            color: #FCFCFC;
             margin-bottom: 8px;
         }
 
         .item-price {
             font-size: 20px;
             font-weight: 600;
-            color: #7ee787;
+            color: #FFFFFF;
             margin-bottom: 12px;
         }
 
