--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         }
 
         .sell-btn {
-            background: #238636;
+            background: #2B5AAC;
             color: white;
             border: none;
             padding: 8px 16px;
@@ -46,7 +46,7 @@
         }
 
         .sell-btn:hover {
-            background: #2ea043;
+            background: #5785D5;
         }
 
         .container {
@@ -108,7 +108,7 @@
 
         .contact-btn {
             display: inline-block;
-            background: #238636;
+            background: #2B5AAC;
             color: white;
             text-decoration: none;
             padding: 6px 12px;
@@ -119,7 +119,7 @@
         }
 
         .contact-btn:hover {
-            background: #2ea043;
+            background: #5785D5;
         }
 
         .condition-badge {
@@ -241,7 +241,7 @@
 
         .submit-btn {
             width: 100%;
-            background: #238636;
+            background: #2B5AAC;
             color: white;
             border: none;
             padding: 10px;
@@ -253,7 +253,7 @@
         }
 
         .submit-btn:hover {
-            background: #2ea043;
+            background: #5785D5;
         }
 
         .setup-notice {
